horizontal scroll fix

--- a/templates/styles.css
+++ b/templates/styles.css
@@ -3,7 +3,7 @@
 }
 
 #menu {
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.5);
@@ -13,8 +13,7 @@
     font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
     padding: 10px;
 
-}
-#status {
+}#status {
     position: absolute;
     top: 0;
     left: 0;
